crates/vexor-compiler/tests/golden/error/input/if_missing_else.vx
let r = 100
let c = Circle(r)
// missing else
let result = if r > 50 { c }
export result
